tests/reference/asr-type_mismatch2-7b55b06.stderr
warning: Implied save feature
 --> tests/errors/type_mismatch2.f90:3:1
  |
3 | integer :: x
  | ^^^^^^^^^^^^ Assuming save attribute implicitly for variables

semantic error: Type mismatch in binary operator, the types must be compatible
 --> tests/errors/type_mismatch2.f90:4:5
  |
4 | x = 5 + "x"
  |     ^   ^^^ type mismatch (integer and character)
